Adding section for Intel, more recent writing samples and technical proficiencies.

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -19,24 +19,39 @@
 \begin{tabular*}{7in}{l@{\extracolsep{\fill}}r}
 \textbf{\Large Philip B. Tricca}
 & 978.766.5515 \\
-13 Highland Ave. \#1
+1000 Escalon Ave.
 & flihp@twobit.us \\
-Somerville MA, 02143
+Sunnyvale CA, 94085
 & http://twobit.us \\
 \end{tabular*}
 
     \resheading {Qualification Summary}
-    Computer Engineer with 7 years experience working in a government research environment and 2 years architecting and building a security focused, Linux-based virtualization product.
+    Computer Engineer with 7 years experience working in a government research environment and 3 years architecting, analyzing and building security focused Linux-based products and tools.
 Strong technical, organizational and planning skills.
 Professional, trustworthy and a natural communicator.
 Dedicated to technical excellence in software design, implementation and documentation with a specific focus on security.
 
     \resheading {Professional Experience}
-    \resemployer {Citrix Systems}{Bedford,MA}
+    \resemployer {Intel}{\mbox{Santa Clara, CA}}
+    \resjob [
+      Performed design and development tasks aimed at promoting the adoption and proper use of platform security technologies.
+      Primary tasks include:
+    ]{Platform Architect, Platform Security Devision}{10/2014}{present}
+    \begin {itemize}
+      \setlength {\itemsep}{1pt}
+      \setlength {\parskip}{0pt}
+      \setlength {\parsep}{0pt}
+      \item Identification of high value usage models for Intel\textsuperscript{\textregistered} SGX.
+            A specific focus in this task is analysis and documentation of threat models and impact to system security.
+            These designs and documentation were heavily peer reviewed and have moved on to prototype development.
+      \item Successfully pitched project to close the measurement gap caused by traditional boot loader used in Linux environment.
+            Currently in development.
+    \end {itemize}
+    \resemployer {Citrix Systems}{\mbox{Bedford, MA}}
     \resjob [
       The role of architect is a super-set of the responsibilities of a software engineer.
-      Additional responsibilities include:
-    ]{Architect, Client Virtualization Group}{10/2013}{present}
+      Additional responsibilities included:
+    ]{Architect, Client Virtualization Group}{10/2013}{07/2014}
     \begin {itemize}
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
@@ -58,7 +73,7 @@ Dedicated to technical excellence in software design, implementation and documen
       \item Development of platform mandatory access control policy (SELinux / XSM).
       \item Collecting requirements from customers and evaluators / testers for the purpose of knowledge transfer and certification.
     \end {itemize}
-    \resemployer {Air Force Research Lab}{Rome,NY}
+    \resemployer {Air Force Research Lab}{\mbox{Rome, NY}}
     \resjob [
       Performed a mix of work on research efforts relevant to military needs in the area of information systems security and contract management.
     ]{Computer Engineer, Information Directorate}{07/2004}{08/2011}
@@ -88,7 +103,6 @@ Dedicated to technical excellence in software design, implementation and documen
         Dual purpose work on Masters Project and XenClient XT:
         Integration of SELinux with XenClient management stack to separate mutually distrusted QEMU processes (sVirt architecture).
       \end {itemize}
-      \pagebreak
 
     \resheading{Education}
     \begin{itemize}
@@ -133,6 +147,12 @@ Dedicated to technical excellence in software design, implementation and documen
       \setlength {\parskip}{0pt}
       \setlength {\parsep}{0pt}
     \item
+      TrEE vs TCG: Dueling TPM2 Specs:
+      \url {http://twobit.us/2015/11/tree-vs-tcg/}
+    \item
+      Attaching a TPM on the LPC:
+      \url {http://twobit.us/2015/02/attaching-tpm-on-lpc/}
+    \item
       Measured launch on OE-Core:
       \url {http://twobit.us/blog/2013/01/meta-measured/}
     \item
@@ -149,14 +169,14 @@ Dedicated to technical excellence in software design, implementation and documen
       \setlength {\itemsep}{1pt}
       \setlength {\parskip}{0pt}
       \setlength {\parsep}{0pt}
-      \item Flask policy development development and system configuration (SELinux / XSM).
-      \item Familiarity with requirements from IAD SFDE protection profile.
-      \item Appropriate usage of OpenSSL APIs (EVP/RAND) for use in virtual full disk encryption and FIPS mode configuration.
-      \item Design and implementation of secure systems and Cross Domain Solutions based on information flow and mandatory access control principles.
       \item Proficiency with Open Embedded build system and the construction of meta layers / distros.
-      \item Professional / technical writing and documentation suitable for submission as project deliverables.
+      \item Flask policy development and system configuration (SELinux / XSM).
+      \item Appropriate usage of the TPM for constructing measured software systems.
+      \item Threat modeling software systems using the STRIDE methodology.
+      \item Appropriate usage of OpenSSL APIs (EVP/RAND).
       \item Programming in popular languages (shell,C,Python), quickly learns new languages as needed.
-      \item Basic git usage and work flows.
+      \item Professional / technical writing and documentation suitable for submission as project deliverables.
+      \item Proficiency with popular OSS tools and work flows.
       \item Document preparation in \LaTeX.
     \end {itemize}
 \end {document}
