--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -24,71 +24,84 @@ San Bruno CA, 94066
 \end{tabular*}
 
     \resheading {Qualification Summary}
-Computer Engineer with 7 years experience working in a government research
-environment and 6 years analyzing, designing  and building security focused
-Linux-based products and tools. Strong technical, organizational and planning
-skills. Professional, trustworthy and a natural communicator. Dedicated to
-technical excellence in software design, implementation and documentation
-with a focus on security.
+Computer Engineer with 7 years experience in a government research environment
+and 6 years analyzing, designing, and building security oriented Linux-based
+products and tools. Strong technical, organizational and planning skills.
+Professional, trustworthy and a natural communicator. Dedicated to technical
+excellence in software design, implementation and documentation with a focus
+on security.
 
     \resheading {Professional Experience}
     \resemployer {Intel}{\mbox{Santa Clara, CA}}
     \resjob [
-      Performed design and development tasks aimed at promoting the adoption and proper use of platform security technologies.
-      Primary tasks include:
-    ]{Platform Architect, Platform Security Devision}{10/2014}{present}
+      Performs design and development tasks to promote the adoption and correct
+      use of platform security technologies. Primary tasks include:
+    ]{Platform Architect, Platform Security Division}{10/2014}{present}
     \begin {itemize}
       \setlength {\itemsep}{1pt}
       \setlength {\parskip}{0pt}
       \setlength {\parsep}{0pt}
-      \item Design and implementation of TPM2 Software Stack (TSS2) APIs and
-            plumbing. All API design done collaboratively with the Trusted
-            Computing Group (TCG) TSS2 working group. Source code implementing
-            the TSS2 libraries, system daemon and tools based on TCG
-            specifications published as OSS:
-            \url{https://github.com/tpm2-software/}
-      \item Identification of high value usage models for Intel\textsuperscript{\textregistered} SGX.
-            A specific focus in this task is analysis and documentation of threat models and impact to system security.
-            These designs and documentation were heavily peer reviewed and have moved on to prototype development.
+      \item Design and implementation of TSS2 APIs and plumbing. All API
+        design done collaboratively with the Trusted Computing Group (TCG)
+        TSS2 working group. Source code implementing the TSS2 libraries,
+        system daemon and tools based on TCG specifications published and
+        maintained as OSS: \url{https://github.com/tpm2-software/}
+      \item Identification of high value usage models for
+        Intel\textsuperscript{\textregistered} SGX. Duties include analysis
+        and documentation of threat models as well as impact to system
+        security. Designs and documentation are peer reviewed, socialized
+        with customers before moving on to prototype development.
     \end {itemize}
     \resemployer {Citrix Systems}{\mbox{Bedford, MA}}
     \resjob [
-      The role of architect is a super-set of the responsibilities of a software engineer.
+      Oversaw the open source release of the XenClient XT client
+      virtualization product as the OpenXT project.
       Additional responsibilities included:
     ]{Architect, Client Virtualization Group}{10/2013}{07/2014}
     \begin {itemize}
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
         \setlength {\parsep}{0pt}
-      \item Cross-product design and requirements gathering to reduce duplication, standardize implementations and reduce likelihood of flaws.
-      \item Architect and implement virtual disk encryption, lead customer requirements and design review.
+      \item Design and implementation of virtual disk encryption component.
+      \item Lead customer requirement collection and design review.
     \end {itemize}
     \resjob [
-      Developer on XenClient XT product: a client hypervisor focused on strong separation and security properties.
-      Primary customers include government defense agencies.
-      Contributions to this project include:
+      Developer on XenClient XT product: a client hypervisor focused on strong
+      separation and security properties. Primary customers include government
+      defense agencies. Contributions to this project include:
     ]{Senior Software Engineer, Client Virtualization Group}{08/2011}{10/2013}
     \begin {itemize}
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
         \setlength {\parsep}{0pt}
-      \item Design and implementation of platform measured launch using the TPM and Intel\textsuperscript{\textregistered} TXT.
-      \item Defining and documenting threat models and the software architectures that defend against them.
-      \item Development of platform mandatory access control policy (SELinux / XSM).
-      \item Collecting requirements from customers and evaluators / testers for the purpose of knowledge transfer and certification.
+      \item Design and implementation of platform measured launch using the
+        TPM, Intel\textsuperscript{\textregistered} TXT and the OpenEmbedded
+        build framework.
+      \item Defining and documenting threat models and the software
+        architectures that defend against them.
+      \item Development of platform mandatory access control policy (SELinux /
+        XSM).
+      \item Collecting requirements from customers and evaluators / testers
+        for the purpose of knowledge transfer and certification.
     \end {itemize}
     \resemployer {Air Force Research Lab}{\mbox{Rome, NY}}
     \resjob [
-      Performed a mix of work on research efforts relevant to military needs in the area of information systems security and contract management.
+      Performed a mix of work on research efforts relevant to military needs
+      in the area of information systems security and contract management.
     ]{Computer Engineer, Information Directorate}{07/2004}{08/2011}
       \begin {itemize}
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
         \setlength {\parsep}{0pt}
-      \item Lead Engineer on SecureView project. Responsible for security architecture, technical design and customer reviews.
-      \item Design improvements to ``Guard'' systems through the application of mandatory access control mechanisms and information flow principles.
-      \item Maintain relationships with security community through academic and industry conferences.
-      \item Contract management and technical guidance of cooperative research agreements with academic institutions including Cornell and PSU totaling over \$2M.
+      \item Lead Engineer on SecureView project. Responsible for security
+        architecture, technical design and customer reviews.
+      \item Design improvements to ``Guard'' systems through the application
+        of mandatory access control mechanisms and information flow principles.
+      \item Maintain relationships with security community through academic
+        and industry conferences.
+      \item Contract management and technical guidance of cooperative research
+        agreements with academic institutions including Cornell and PSU
+        totaling over \$2M.
       \end {itemize}
       \resemployer {Open Source}{}
       \resjob [
@@ -99,13 +112,14 @@ with a focus on security.
         \setlength {\itemsep}{1pt}
         \setlength {\parskip}{0pt}
         \setlength {\parsep}{0pt}
-      \item
-        Creator and maintainer of the meta-measured OpenEmbedded layer to automate measured launch in embedded-style build environment.
+      \item Creator and maintainer of the meta-measured OpenEmbedded layer to
+        automate measured launch in embedded-style build environment.
         Currently listed in the official OE layer index.
-      \item Contributor to the meta-selinux and meta-virtualization OpenEmbedded layers.
-      \item
-        Dual purpose work on Masters Project and XenClient XT:
-        Integration of SELinux with XenClient management stack to separate mutually distrusted QEMU processes (sVirt architecture).
+      \item Contributor to the meta-selinux and meta-virtualization
+        OpenEmbedded layers.
+      \item Dual purpose work on Masters Project and XenClient XT:
+        Integration of SELinux with XenClient management stack to separate
+        mutually distrusted QEMU processes (sVirt architecture).
       \end {itemize}
 
     \resheading{Education}
@@ -114,13 +128,12 @@ with a focus on security.
       \resschool{Syracuse University}{New York}
       \resdegree[
         Software Security and Systems Assurance\\
-        Advisor: Dr. Wenliang (Kevin) Du\\
-        Cumulative GPA: 3.85
+        Advisor: Dr. Wenliang (Kevin) Du
       ]{M.S.}{Computer Engineering}{2006-2012}
       \resdegree[
-        Focus of study: Software Engineering.\\
-        Particular interest in system level programming (i386 Assembly, C).\\
-        Cumulative GPA: 3.78
+        Focus of study: Software Engineering with a specific focus on system
+        programming in i386 Assembly and C.
+        Graduated Magna Cum Laude
       ]{B.S.}{Computer Engineering}{2000-2004}
     \end{itemize}
 
@@ -135,53 +148,48 @@ with a focus on security.
     \item Outstanding Engineering Professionalism Award.
       Mohawk Valley Engineers Executive Council.
       2010-02-18
-    \item Special recognition of service from the Commander for service rendered while leading Commander Directed Investigation, 2009.
+    \item Special recognition of service from the Commander for service
+      rendered while leading Commander Directed Investigation, 2009.
     \end {itemize}
 
     \resheading {Public Speaking \& Publications}
     \begin{itemize}
     \item {\it TPM2 Software Stack: Device Driver to Event-Driven Applications}
-    Linux Plumbers Conference
-    Los Angeles, California.
-    2017
-    URL: \url {http://www.linuxplumbersconf.org/2017/ocw/sessions/4675.html}
+      Linux Plumbers Conference
+      Los Angeles, California.
+      2017
+      URL: \url {http://www.linuxplumbersconf.org/2017/ocw/sessions/4675.html}
     \item {\it Securing Embedded Linux Systems with TPM2}.
-    Embedded Linux Conference
-    Portland, Oregon.
-    2017.
-    URL: \url {https://www.youtube.com/watch?v=0qu9R7Tlw9o}
+      Embedded Linux Conference
+      Portland, Oregon.
+      2017.
+      URL: \url {https://www.youtube.com/watch?v=0qu9R7Tlw9o}
     \item {\it In-Guest Mechanisms to Strengthen Guest Separation}.
-    Xen Summit colocated with LinuxCon.
-    Edinburgh, Scotland,
-    2013.
-    URL: \url {https://www.youtube.com/watch?v=6Q8mlTBn-ZI}
+      Xen Summit co-located with LinuxCon.
+      Edinburgh, Scotland,
+      2013.
+      URL: \url {https://www.youtube.com/watch?v=6Q8mlTBn-ZI}
     \item {\it A pipeline development toolkit in support of secure information flow goals}.
-    Proceedings of the 5th Annual CSIIR Workshop : Cyber Security and Information Intelligence Challenges and Strategies.
-    Oak Ridge, Tennessee.
-    2009.
+      Proceedings of the 5th Annual CSIIR Workshop : Cyber Security and Information Intelligence Challenges and Strategies.
+      Oak Ridge, Tennessee.
+      2009.
     \end{itemize}
-    Representative writing samples:
+    \resheading {Representative writing samples}
     \begin {itemize}
       \setlength {\itemsep}{1pt}
       \setlength {\parskip}{0pt}
       \setlength {\parsep}{0pt}
-    \item
-      TCG TSS2 async APIs and event driven programming:
+    \item TCG TSS2 async APIs and event driven programming:
       \url {https://blog.twobit.us/2017/10/15/tcg-tss2-async-api-event-driven/}
-    \item
-      TrEE vs TCG: Dueling TPM2 Specs:
+    \item TrEE vs TCG: Dueling TPM2 Specs:
       \url {http://blog.twobit.us/2015/11/tree-vs-tcg/}
-    \item
-      Attaching a TPM on the LPC:
+    \item Attaching a TPM on the LPC:
       \url {http://blog.twobit.us/2015/02/attaching-tpm-on-lpc/}
-    \item
-      Measured launch on OE-Core:
+    \item Measured launch on OE-Core:
       \url {http://blog.twobit.us/2013/01/meta-measured/}
-    \item
-      An on-going series documenting my masters project implementing the sVirt architecture on XenClient:
+    \item An on-going series documenting my masters project implementing the sVirt architecture on XenClient:
       \url {http://blog.twobit.us/tag/mastersproject/}
-    \item
-      A two part series describing the ``why'' and ``how'' of configuring a network driver domain on Xen:
+    \item A two part series describing the ``why'' and ``how'' of configuring a network driver domain on Xen:
       \url {http://blog.twobit.us/2010/07/xen-network-driver-domain-wh/}
       \url {http://blog.twobit.us/2010/07/xen-network-driver-domain-how/}
     \end {itemize}
@@ -193,14 +201,14 @@ with a focus on security.
       \setlength {\parsep}{0pt}
       \item TPM2 \& TCG TSS2 API and infrastructure concepts and implementation
           on Linux and Windows.
-      \item GNU Autotools build and test harness.
-      \item Test strategies and test driven development concepts.
+      \item GNU Autotools build and parallel test harness.
+      \item Test strategies and test driven development methodologies.
       \item Continuous integration and test automation: travis-ci, coveralls,
-          cmocka etc.
+        cmocka etc.
       \item Open Source Software development and project management /
-          maintainership with 3 years experience maintaining large C code
-          base.
-      \item Proficiency with Open Embedded build system and the construction of meta layers / distros.
+        maintainership with 5 years experience maintaining large C code
+        base.
+      \item Proficiency with the OpenEmbedded build system and the construction of meta layers / distros.
       \item Flask policy development and system configuration (SELinux / XSM).
       \item Appropriate usage of the TPM for constructing measured software systems.
       \item Threat modeling software systems using the STRIDE methodology.
