Cleanup heading in OSS section + minor word smithing.
Signed-off-by: Philip Tricca <flihp@twobit.us>

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -103,10 +103,11 @@ on security.
         agreements with academic institutions including Cornell and PSU
         totaling over \$2M.
       \end {itemize}
-      \resemployer {Open Source}{}
+      \resemployer {Open Source Software}{}
       \resjob [
         Contributing code, testing and/or debugging to open source projects.
-        Blogger and active participant in open source and security community.
+        Active community participant asking \& answering questions on public
+        mailing list and issue trackers.
       ] {Contributor} {01/2010} {present}
       \begin {itemize}
         \setlength {\itemsep}{1pt}
