Add 'key qualifications section'.
Specifically highlighting my work building the TSS2 project, release
management / working with upstream distros and transitioning research
projects to product.

Signed-off-by: Philip Tricca <flihp@twobit.us>

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -31,6 +31,24 @@ Professional, trustworthy and a natural communicator. Dedicated to technical
 excellence in software design, implementation and documentation with a focus
 on security.
 
+\resheading {Key Qualifications}
+\begin {itemize}
+  \setlength {\itemsep}{1pt}
+  \setlength {\parskip}{0pt}
+  \setlength {\parsep}{0pt}
+  \item Transformed Intel's TPM2 Software Stack (TSS2) from one-person
+    prototype to healthy Open Source Software (OSS) project by embracing
+    community best practices and processes, rigorous unit and integration
+    testing, heavy use of continuous integration \& automation tools and
+    role modeling inclusive behavior.
+  \item Delivered software releases on predictable schedule balancing
+    requirements from corporate customers and upstream Linux Distributions
+    (RedHat, Suse etc) through release management and feature planning
+    activities.
+  \item Successfully transitioned hardware root of trust prototype from
+    research project developed in government research lab to Citrix product.
+\end {itemize}
+
     \resheading {Professional Experience}
     \resemployer {Intel}{\mbox{Santa Clara, CA}}
     \resjob [
