cutting more stuff for space
Signed-off-by: Philip Tricca <flihp@twobit.us>

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -111,22 +111,6 @@ on security.
     totaling over \$2M.
 \end {itemize}
 
-\resemployer {Open Source Software}{}
-\resjob [
-  Contributing code, testing and/or debugging to open source projects.
-  Active community participant asking \& answering questions on public
-  mailing list and issue trackers.
-] {Contributor} {01/2010} {present}
-\begin {itemize}
-  \setlength {\itemsep}{1pt}
-  \setlength {\parskip}{0pt}
-  \setlength {\parsep}{0pt}
-  \item Creator and maintainer of the meta-measured OpenEmbedded layer to
-    automate measured launch in embedded-style build environment.
-  \item Contributor to the meta-selinux and meta-virtualization
-    OpenEmbedded layers.
-\end {itemize}
-
 \resheading{Education}
 \begin{itemize}
   \item[]
@@ -136,8 +120,7 @@ on security.
     Advisor: Dr. Wenliang (Kevin) Du
   ]{M.S.}{Computer Engineering}{2006-2012}
   \resdegree[
-    Focus of study: Software Engineering with a specific focus on system
-    programming in i386 Assembly and C.
+    Software Engineering with a specific focus on system programming.
     Graduated Magna Cum Laude
   ]{B.S.}{Computer Engineering}{2000-2004}
 \end{itemize}
@@ -183,10 +166,6 @@ on security.
     \url {https://blog.twobit.us/2017/10/15/tcg-tss2-async-api-event-driven/}
   \item TrEE vs TCG: Dueling TPM2 Specs:
     \url {http://blog.twobit.us/2015/11/tree-vs-tcg/}
-  \item Attaching a TPM on the LPC:
-    \url {http://blog.twobit.us/2015/02/attaching-tpm-on-lpc/}
-  \item Measured launch on OE-Core:
-    \url {http://blog.twobit.us/2013/01/meta-measured/}
 \end{itemize}
 
 \resheading {Relevant Technical Proficiencies}
