Change domain from twobit.us to twobit.org.
Signed-off-by: Philip Tricca <flihp@twobit.org>

--- a/pbtricca-resume.tex
+++ b/pbtricca-resume.tex
@@ -18,9 +18,9 @@
 % Page heading and name/contact info table
 \begin{tabular*}{7in}{l@{\extracolsep{\fill}}r}
 \textbf{\Large Philip B. Tricca}
-& flihp@twobit.us \\
+& flihp@twobit.org \\
 San Bruno CA, 94066
-& http://twobit.us \\
+& http://twobit.org \\
 \end{tabular*}
 
 \resheading {Qualification Summary}
